# bsoup

./: Cargo.toml
develop-center-md/: test1.md
develop-center-md/document/: 1.md  2.md
develop-center-md/document/test1/: test1.md
develop-center-md/document/test2/test3/: test2.md
src/: lib.rs  main.rs
src/api/: directory.rs  document.rs  file_management.rs  mod.rs  open_file.rs  uploader.rs
src/model/: admin.rs  document.rs  mod.rs  upload.rs
