[package]
name = "Develop-Center"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
walkdir = "2.3.3"
serde = { version = "1.0.215", features = ["derive"] }
chrono = "0.4.38"
chrono-tz = "0.10.0"
actix-multipart = "0.7.2"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "fs"] }
actix-form-data = "0.6.2"
futures-util = "0.3.31"
panic-message = "0.3.0"
serde_derive = "1.0.215"